# wr-stats-rust

./: .gitignore  2018-04-19_elma_wrs.csv  Cargo.toml  build.rs  stats.txt  targets.csv  wr-stats.py  wr-stats_tables.csv  wrs_beat.txt
div/: example_code.rs
src/: cont.rs  controllers.rs  des.rs  html.rs  http.rs  io.rs  main.rs  model.rs  shared.rs  styles.css  templ.rs  time.rs  wr-stats.js
wr-stats/: 2018-04-19_elma_wrs.csv  targets.csv
