[package]
name = "wr-stats"
version = "0.4.0-alpha"
authors = ["Eivind E. Dahl <eivind.dahl@gmail.com>"]
build = "build.rs"

[dependencies]
failure = "*"
failure_derive = "*"
csv = "1.0.0-beta.5"
regex = "*"
elma = "*"
web-view = "*"
notify = "*"
reqwest = "*"

[target.'cfg(windows)'.build-dependencies]
winres = { git = "https://github.com/mxre/winres" }
